Use unclamped extension count for in-menu width

This prevents clamping the BrowserActionsContainer width to the number
of installed extensions, which prevented extensions to be dropped in the
entire menu-item area.

Bug: chromium:920162
Change-Id: Ic4f009746b89c88f5cea6862eca0e13c219e5c15
Reviewed-on: https://chromium-review.googlesource.com/c/1409920
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623879}
Former-commit-id: 19a0c1ed924f2a632c6255fe311d6819568c031f